<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppColor"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/AppColor" />

    <LinearLayout
        android:id="@+id/llRestTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/toolbarSettings"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvRestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/rest_time_in_seconds"
            />
        <com.google.android.material.slider.Slider
            android:id="@+id/slRestTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:valueFrom="5"
            android:stepSize="5"
            android:value="10"
            android:valueTo="120"
            app:labelBehavior="withinBounds"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llExerciseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/llRestTime"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvExerciseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/exercise_time"
            />
        <com.google.android.material.slider.Slider
            android:id="@+id/slExerciseTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:valueFrom="5"
            android:stepSize="5"
            android:valueTo="300"
            android:value="30"
            app:labelBehavior="withinBounds"
            />
    </LinearLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scSpeakOut"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_out_exercise_name"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:checked="true"
        android:layout_below="@+id/llExerciseTime"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scExerciseCompletionSound"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_completion_sound_alert"
        android:textSize="20sp"
        android:checked="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_below="@+id/scSpeakOut"/>
</RelativeLayout>